# calculator_advanced_statistics

./: .gitignore  README.md  diagnose_enums.py  generate_icon.py  main.py  pyproject.toml
src/controllers/: main_controller.py
src/models/: base.py  bayes.py  custom_analysis.py  distributions.py  hypothesis.py  mle.py  regression.py
src/ui/: main_window.py  styles.qss
src/ui/widgets/: latex_label.py  plot_canvas.py
src/utils/: math_renderer.py
